Добавление проверки на пустые поля

--- a/index.html
+++ b/index.html
@@ -328,7 +328,9 @@
             </tr>
             <tr>
               <td><span>Cos &phi;</span></td>
-              <td><input type="text" name="device-cos" id="device-cos" /></td>
+              <td>
+                <input type="text" name="device-cos" id="device-cos" />
+              </td>
             </tr>
             <tr>
               <td><span>Маршрутные указатели</span></td>
