--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <option value="Электрическая постоянного тока">
               Электрическая постоянного тока
             </option>
-            <option value="Электрическая постоянного тока">
+            <option value="Электрическая переменного тока">
               Электрическая переменного тока
             </option>
           </select>
